<resources>
    <string name="app_name">Farmily</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_farmer">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Crops</string>
    <string name="title_notifications">Forum</string>
    <string name="title_activity_m_farmer">MFarmer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="check_crop_disease">Check Crop Disease</string>
    <string name="find_customer">Customers</string>
    <string name="sales_summary">Sales Summary</string>
    <string name="ask_expert">Ask Experts</string>
    <string name="profile">Profile</string>
    <string name="account_details">Account</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>